# blumenladen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blumenladen/: __init__.py  api.py  db.py  maillib.py  models.py
blumenladen/vendors/exotic_garden/: __init__.py  invoice.py
dashboard/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.vue  main.ts
dashboard/src/assets/: main.css
dashboard/src/components/: CardButton.vue  ThemeToggle.vue
dashboard/src/lib/: api.ts  data.ts  types.ts  utils.ts
dashboard/src/router/: index.ts
dashboard/src/types/: vue-good-table-next.d.ts
dashboard/src/views/: HomeView.vue  InventoryView.vue  ReportsView.vue
